fix: satisfy Java 8 and Helper warning gates